# advent_of_code

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/advent_of_code/y_2024/_template/: puzzle.py
src/advent_of_code/y_2024/day_01/: puzzle.py
src/advent_of_code/y_2024/day_02/: puzzle.py
src/advent_of_code/y_2024/day_03/: day_03.py  puzzle.py
src/advent_of_code/y_2024/day_04/: puzzle.py
src/advent_of_code/y_2024/day_05/: puzzle.py
src/advent_of_code/y_2024/day_06/: puzzle.py
src/advent_of_code/y_2024/day_07/: puzzle.py
src/advent_of_code/y_2024/day_08/: puzzle.py
src/advent_of_code/y_2024/day_09/: puzzle.py
src/advent_of_code/y_2024/day_10/: puzzle.py
src/advent_of_code/y_2024/day_11/: puzzle.py
src/advent_of_code/y_2024/day_12/: puzzle.py
src/advent_of_code/y_2024/day_13/: puzzle.py
src/advent_of_code/y_2024/day_14/: puzzle.py
src/advent_of_code/y_2024/day_15/: puzzle.py
src/advent_of_code/y_2024/day_16/: puzzle.py
src/advent_of_code/y_2025/day_01/: puzzle.py
tests/advent_2024/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  test_template.py
